--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-bootstrap": "^2.7.2",
     "react-bootstrap-navbar": "^1.1.0",
     "react-dom": "^18.2.0",
+    "react-html5-camera-photo": "^1.5.11",
     "react-native-camera": "^4.2.1",
     "react-qr-code": "^2.0.11",
     "react-router-dom": "^6.8.2",
